feat: add service authenticated and new page memories (front and mobile) and service stream

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": [
     "@rocketseat/eslint-config/node",
     "plugin:prettier/recommended"
-  ]
+  ],
+  "rules": {
+    "camelcase": "off"
+  }
 }
